# covalent-base-standard-bots

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  requirements.txt
calibration/: README.md
docs/: StandardBotsCalibrationGuide.md
src/archive-for-safety/: MapFitterDuplicate.py  SineSweepReaderDuplicate.py  fineTuneModelGenDuplicate.py  processCalibrationDataDuplicate.py
src/archive_for_safety/: MapFitter.py  MapFitterDuplicate.py  MapGeneration.py  SineSweepReader.py  SineSweepReaderDuplicate.py  fineTuneModelGen.py  fineTuneModelGenDuplicate.py  processCalibrationData.py
src/calibration/: README.md  autoCalibration.py
src/calibration/data/: README.md
src/calibration/models/test/test_robot_predictor_joint_numAxes3/: axis_0.pt  axis_1.pt  axis_2.pt
src/control/: BaseShaper.py  CMakeLists.txt  InputShaper.py  README.md  setup_and_test.py  test_base_shaper_python.py
src/control/include/: BaseShaper.cpp  BaseShaper.hpp  BaseShaperBindings.cpp
src/control/lib/: test_base_shaper
src/control/python/: BaseShaper.py
src/cpp/control/: CMakeLists.txt  InputShaper.cpp  InputShaper.hpp  README.md  test_base_shaper.cpp  test_input_shaper.cpp
src/cpp/identification/: CLI11.hpp  CMakeLists.txt  CalibrationCore.cpp  IDENTIFICATION_MODULE.cpp  LegacyMapLoader.cpp  LegacyMapLoader.hpp  MapFitter.cpp  MapFitter.hpp  MapFitterBindings.cpp  MapFitterCore.cpp  MapGeneration.cpp  MapGeneration.hpp  NPZMapLoader.cpp  NPZMapLoader.hpp  SineSweepReader.cpp  SineSweepReader.hpp  SineSweepReaderData.cpp  _sinesweepreader.cpp  fineTuneModelGen.cpp  fineTuneModelGen.hpp  processCalibrationData.cpp  processCalibrationData.hpp
src/identification/: CLI11.hpp  CMakeLists.txt  FineTuneModelGen.cpp  FineTuneModelGen.hpp  MapFitter.py  MapFitterDelete.py  MapGeneration.py  MapGenerationDelete.py  ProcessCalibrationData.py  README.md  SineSweepReader.py  __init__.py  fineTuneModelGen.py  fine_tune_model_cli.py  processCalibrationData.py  process_calibration_data_cli.py
src/identification/include/: CLI11.hpp  FineTuneModelGen.hpp  MapGeneration.hpp  SineSweepReader.hpp
src/identification/python/: fine_tune_model.py  process_calibration_data.py
src/robots/: README.md  Standard.py  StandardRosManager.py  TestRobot.py  __init__.py
src/robots/urdf/: modelone.urdf  test_robot.urdf
src/test/: test_process_calibration_data.py  test_sinesweepreader.py
src/util/: README.md  Robot.py  RobotDynamics.py  RobotInterface.py  Trajectory.py  Utility.py
src/util/urdf_to_dh/: generate_dh.py  geometry_helpers.py  kinematics_helpers.py  urdf_helpers.py
