[build-system]
requires = ["scikit-build-core", "pybind11", "setuptools>=61.0", "wheel"]
build-backend = "scikit_build_core.build"

[project]
name = "covalent-base"
version = "0.1"
description = "Covalent Base by Reforge Robotics"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name="Nosa Edoimioya", email="nosa@reforgerobotics.com" }
]
dependencies = []

[tool.scikit-build]
wheel.packages = ["src"]

[tool.scikit-build.packages.find]
where = ["src"]
